syntax = "proto3";
package telepresence.common;

option go_package = "github.com/datawire/telepresence2/pkg/rpc/common";

message VersionInfo {
  int32 api_version = 1;
  string version = 2;
}
